# BlockGame

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  embed_shaders.bat  run_clang_tidy.bat
GameBase/: CMakeLists.txt  GameBase.cpp  GameBase.h
GameCode/: AABB.cpp  AABB.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Collision.cpp  Collision.h  Config.h  Definitions.h  Frustum.cpp  Frustum.h  Game.cpp  Geometry.h  Graphics.cpp  Graphics.h  Play.cpp  Play.h  Save.cpp  Save.h  Shader.cpp  Shader.h  ShadowDebugVisuals.cpp  ShadowDebugVisuals.h  Sound.cpp  Sound.h  Utility.h  frag.glsl  frag_csm_debug.glsl  frag_gui.glsl  vertex.glsl  vertex_gui.glsl  vertex_line.glsl  vertex_simple_depth.glsl  vertex_star.glsl
GameCode/shaders/: frag_csm_debug_glsl.h  frag_empty_glsl.h  frag_glsl.h  frag_gui_glsl.h  frag_line_glsl.h  frag_star_glsl.h  vertex_csm_debug_glsl.h  vertex_glsl.h  vertex_gui_glsl.h  vertex_line_glsl.h  vertex_simple_depth_glsl.h  vertex_star_glsl.h
ShaderEmbedder/: CMakeLists.txt  Main.cpp
lib/glad/: glad.c  glad.h
lib/noise/: SimplexNoise.cpp  SimplexNoise.h
lib/stb/: stb_image_write.h
